--- a/travel-website/src/Styles/HeroSection.css
+++ b/travel-website/src/Styles/HeroSection.css
@@ -7,3 +7,9 @@
     flex-direction: column;
     padding: 0 40px;
 }
+.hero-nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0;
+}
