--- a/travel-website/src/Styles/HeroSection.css
+++ b/travel-website/src/Styles/HeroSection.css
@@ -13,3 +13,111 @@
     align-items: center;
     padding: 30px 0;
 }
+
+.logo{
+    font-weight: bold;
+    font-size: 22px;
+    color: #000;
+}
+
+.nav-links{
+    list-style: none;
+    display: flex;
+    gap: 24px;
+    font-weight: 500;
+    color: #000;
+}
+
+.nav-links li a{
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+}
+
+.social-icons i {
+    margin-left: 16px;
+    font-size: 18px;
+    color: #000;
+    cursor: pointer;
+
+}
+
+.hero-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: auto;
+    padding-bottom: 40px;
+}
+
+.left-content{
+    color: #001f4d;
+}
+
+.subheading{
+    font-weight: bold;
+    color: #3366cc;
+}
+
+.left-content h1{
+    font-size: 48px;
+    line-height: 1.2;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.hero-btn{
+    background-color: #2ecc71;
+    color: white;
+    padding: 12px 28px;
+    border: none;
+    border-radius: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.hero-btn:hover{
+    background-color: #27ae60;
+}
+
+.scroll-cards {
+    display: flex;
+    gap: 20px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    padding-bottom: 10px;
+}
+
+.scroll-cards ::-webkit-scrollbar{
+    display: none;
+}
+
+.scroll-cards{
+    min-width: none;
+    background: white;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+    scroll-snap-align: start;
+    text-align: center;
+    color: #000;
+    transition: transform 0.3s ease;
+}
+
+.scroll-cards:hover {
+    transform: scale(1.05);
+} 
+
+.scroll-cards img{
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.scroll-cards h3{
+    margin: 10px;
+    font-weight: 600;
+}
