--- a/travel-website/src/Styles/TopDestinations.css
+++ b/travel-website/src/Styles/TopDestinations.css
@@ -5,9 +5,10 @@
 }
 
 .top-destinations h2 {
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
     margin-bottom: 30px;
+    color:  #003399;
 }
 
 .destination-grid {
