--- a/travel-website/src/Styles/TopDestinations.css
+++ b/travel-website/src/Styles/TopDestinations.css
@@ -7,8 +7,13 @@
 .top-destinations h2 {
     font-size: 40px;
     font-weight: bold;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     color:  #003399;
+}
+.subtitle {
+    font-size: 18px;
+    color: #666;
+    margin-bottom: 30px;
 }
 
 .destination-grid {
