--- a/travel-website/src/Styles/TrendingSection.css
+++ b/travel-website/src/Styles/TrendingSection.css
@@ -3,15 +3,21 @@
 .trending-section {
   margin-top: 60px;
   padding: 0 60px;
+  margin-bottom: -20px;
 }
 
 .trending-title {
   font-size: 40px;
   font-weight: 700;
   color: #003399;
-  margin-bottom: 32px;
   text-align: center;
-  
+  margin-bottom: -5px;
+}
+.subtitle {
+  font-size: 18px;
+  color: #666;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 .trending-cards {
