Adding new NavBar

--- a/travel-website/src/Styles/HeroSection.css
+++ b/travel-website/src/Styles/HeroSection.css
@@ -14,7 +14,7 @@ body {
   padding: 0 60px;
 }
 
-.hero-nav {
+/* .hero-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -58,7 +58,7 @@ body {
 .social-icons i:hover {
   transform: scale(1.2);
   color: #2ecc71;
-} 
+} */
 
 .hero-content {
   display: flex;
