--- a/travel-website/src/Styles/Contact.css
+++ b/travel-website/src/Styles/Contact.css
@@ -1,4 +1,46 @@
 .contact {
   padding: 80px 20px;
   background: #f9f9f9;
+  text-align: center;
 }
+.contact-title{
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    color: #222;
+}
+.contact-subtitle {
+    font-size: 1rem;
+    margin-bottom: 40px;
+    color: #555;
+}
+.contact-container{
+    max-width: 1000px;
+    margin: auto;
+}
+.contact-grid{
+    display:grid;
+    grid-template-columns : repeat(2,1fr);
+    gap: 40px;
+    align-items: start;
+}
+.contact-info{
+    text-align: left;
+}
+ .contact-info h3{
+     margin-bottom: 15px;
+     font-size: 1.3rem;
+     color: #333;
+ }
+ .contact-form form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+ }
+ .contact-form input,
+ .contact-form textarea {
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 1rem;
+    outline: none;
+ }
